--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "chroma>=0.2.0",
+    "chromadb>=1.0.7",
     "dotenv>=0.9.9",
     "ipykernel>=6.29.5",
     "langchain-community>=0.3.23",
+    "pypdf>=5.4.0",
+    "sentence-transformers>=4.1.0",
     "streamlit>=1.44.1",
+    "tiktoken>=0.9.0",
 ]
